--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="format_app_data_dir">数据目录：%1$s</string>
     <string name="format_app_apk_dir">APK目录：%1$s</string>
     <string name="format_app_storage">存储占用：%1$s(code:%2$s,data:%3$s,cache:%4$s)</string>
-    <string name="format_rss">RSS：%1$s</string>
+    <string name="format_rss">PSS：%1$s</string>
     <string name="format_top_page">栈顶页面：%1$s</string>
     <string name="format_sample_time">采样时间：%1$s</string>
     <string name="format_availabe_mem">可用内存：%1$s</string>
